--- a/app/globals.css
+++ b/app/globals.css
@@ -40,10 +40,21 @@ nav {
 h1 {
   font-size: 2.5rem;
   margin-bottom: 10px;
-  color: black;
+  color: white;
 }
 
 p {
   font-size: 1.2rem;
   line-height: 1.6;
+}
+
+html {
+  scroll-behavior: smooth; /* Smooth scrolling între secțiuni */
+  scroll-snap-type: y mandatory; /* Ajută la focusarea pe fiecare secțiune */
+}
+
+html, body {
+  height: 100%;
+  scroll-behavior: smooth; /* Asigură scroll lin */
+  overflow-y: auto; /* Permite scroll manual */
 }
