--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
 
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Work Sans', sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -37,6 +37,11 @@ nav {
   align-items: center;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+}
+
 h1 {
   font-size: 2.5rem;
   margin-bottom: 10px;
@@ -44,7 +49,7 @@ h1 {
 }
 
 p {
-  font-size: 1.2rem;
+  font-size: 23px;
   line-height: 1.6;
 }
 
