--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,13 +10,13 @@
 }
 
 .section {
-    margin-top: 50px;
+    /*margin-top: 50px;*/
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: white;
-    padding: 50px 20px;
+    padding: 35px 20px;
     min-height: 100vh;
     scroll-snap-align: start;
 }
@@ -71,13 +71,13 @@
 }
 
 .imageContainer {
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     display: flex;
     justify-content: center;
 }
 
 .imageContainer img {
-    max-width: 100%;
+    max-width: 85%;
     height: auto;
     border-radius: 10px;
 }
@@ -118,6 +118,7 @@
 }
 
 .titleContainer h1 {
+    /*margin-top: 50px;*/
     font-size: 2.5rem;
     font-weight: bold;
     color: white;
@@ -147,7 +148,7 @@
 }
 
 .imageContainer img {
-    max-width: 100%;
+    max-width: 75%;
     height: auto;
     border-radius: 10px;
 }
@@ -169,7 +170,7 @@
 }
 
 .list li {
-    font-size: 1.2rem;
+    font-size: 1rem;
     line-height: 1.6;
     margin-bottom: 8px;
 }
@@ -182,6 +183,6 @@
 
     .textContainer, .imageContainer {
         flex: none;
-        width: 100%;
+        width: 85%;
     }
 }
